# UCScraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Block.h  Block.hpp  Shader.hpp  camera.h  camera.hpp  shader_m.hpp
res/shaders/: basic_lighting.fs  basic_lighting.vs  fragment.glsl  light_cube.fs  light_cube.vs  vertex.glsl
